# prophet2

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: workflow.yml
prophet/: Cargo.toml
prophet-bounded-context/: Cargo.toml
prophet-bounded-context/src/: compat.rs  lib.rs  main.rs
prophet-mermaid/: Cargo.toml
prophet-mermaid/src/: lib.rs
prophet-model/: Cargo.toml
prophet-model/src/: lib.rs
prophet-ressa/: Cargo.toml
prophet-ressa-minify/: Cargo.toml
prophet-ressa-minify/res/Cpp/callgraph/: client_and_endpoint_name.rn  client_and_wrapper_name.rn  wrapper_and_pool_name.rn
prophet-ressa-minify/res/Cpp/entity/: final.rn  tokens.rn
prophet-ressa-minify/res/Java/endpoint/: callee.rn  controller.rn  endpoint_url_part_path.rn  path_ident.rn  path_lit.rn  path_lit_final.rn  path_root.rn  path_root_ident.rn  path_var.rn  pkg_retriever.rn  ressa.json
prophet-ressa-minify/res/Java/entity/: callback.rn  ressa.json
prophet-ressa-minify/res/deathstarbench/callgraph/: final.rn  ressa.json  service_and_pool_name.rn
prophet-ressa-minify/res/deathstarbench/entity/: collection_and_container.rn  ressa.json
prophet-ressa-minify/res/deathstarbench/simple/: callback.rn  ressa.json
prophet-ressa-minify/res/trainticket/endpoint/: callee.rn  calling_method_final.rn  controller.rn  endpoint_url_part_path.rn  path_ident.rn  path_lit.rn  path_root.rn  path_root_ident.rn  path_var.rn  ressa.json
prophet-ressa-minify/res/trainticket/entity/: callback.rn  ressa.json
prophet-ressa-minify/src/: lib.rs
prophet-ressa/src/: gen_ressa.rs  lib.rs  run.rs
prophet-service/: Cargo.toml
prophet-service/src/: main.rs  routes.rs
prophet/src/: adapter.rs  analyze.rs  app_data.rs  error.rs  lib.rs  mermaid.rs  model.rs  repositories.rs
