[package]
name = "prophet-bounded-context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source-code-parser = { path="../../source-code-parser" } # source-code-parser = { git = "https://github.com/cloudhubs/source-code-parser", rev = "6af6bc3" }
prophet-model = { path = "../prophet-model" }
petgraph = "0.6.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.59"
derive-new = "0.5.8"
actix-web = "3.3.3"
thiserror = "1.0.29"
structopt = "0.3.21"
once_cell = "1.7.2"
