[package]
name = "prophet-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source-code-parser = { git = "https://github.com/cloudhubs/source-code-parser", rev = "6af6bc3" }
petgraph = "0.6.0"
http = "0.2.5"
strum = { version = "0.23.0", features = ["derive"] }
rune = { git = "https://github.com/rune-rs/rune", rev = "ec72a5d" }
