[package]
name = "prophet-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prophet = { path = "../prophet" }
structopt = "0.3.25"
actix-web = "3.3.3"
env_logger = "0.9.0"
tracing = { version = "0.1.29", features = ["log"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"