[package]
name = "prophet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prophet-ressa = { path = "../prophet-ressa" }
prophet-model = { path = "../prophet-model" }
prophet-mermaid = { path = "../prophet-mermaid" }
git2 = "0.13"
tracing = "0.1.26"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
source-code-parser = { git = "https://github.com/cloudhubs/source-code-parser", rev = "b30be50" }
thiserror = "1.0.29"
